<resources>
    <string name="app_name">Star Wars</string>
    <string name="birth_year">birth_year</string>
    <string name="homeworld">homeworld</string>
    <string name="gender">gender</string>
    <string name="starships">starships</string>
    <string name="films">films</string>
    <string name="url">url</string>
    <string name="name">name</string>
    <string name="hair_color">hair_color</string>
    <string name="skin_color">skin-color</string>
    <string name="eye_color">eye_color</string>
    <string name="height">height</string>
    <string name="mass">mass</string>
    <string name="linkUrl">linkUrl</string>
    <string name="imageIcon">imageIcon</string>
    <string name="character_name">Character Name</string>
</resources>
