<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/name"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="8sp"
        android:text="@string/name"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56sp"
        android:layout_marginTop="65sp"
        android:text="@string/gender"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <TextView
        android:id="@+id/homeworld"
        android:layout_width="90sp"
        android:layout_height="30sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="56sp"
        android:text="@string/homeworld"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_year" />


    <TextView
        android:id="@+id/birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginEnd="56sp"
        android:text="@string/birth_year"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/hair_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hair_color"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintVertical_bias="0.095" />


    <TextView
        android:id="@+id/skin_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48sp"
        android:layout_marginTop="52sp"
        android:layout_marginBottom="8sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/skin_color"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hair_color"
        app:layout_constraintVertical_bias="0.015" />


    <!--

                <TextView
                    android:id="@+id/starships"
                    android:layout_width="130sp"
                    android:layout_height="200sp"
                    android:layout_marginEnd="50sp"
                    android:layout_marginBottom="60sp"
                    android:text="@string/starships"
                    app:layout_constraintBottom_toTopOf="@+id/url"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/films"
                    android:layout_width="130sp"
                    android:layout_height="200sp"
                    android:layout_marginStart="50sp"
                    android:layout_marginBottom="60sp"
                    android:text="@string/films"
                    app:layout_constraintBottom_toTopOf="@+id/url"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="207sp"
                    android:layout_height="30sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp"
                    android:layout_marginBottom="70sp"
                    android:text="@string/url"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            -->
</android.support.constraint.ConstraintLayout>